build/log/idf_py_stdout_output_48570
[1/12] Building C object esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee_core.c.obj
[2/12] Performing build step for 'bootloader'
[1/1] cd "/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/build/bootloader/esp-idf/esptool_py" && /home/studiopresent/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/studiopresent/ESP/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++\ implementation/Smart_Lock/build/bootloader/bootloader.bin
Bootloader binary size 0x5500 bytes. 0x2b00 bytes (34%) free.
[3/12] No install step for 'bootloader'
[4/12] Completed 'bootloader'
[5/12] Building CXX object esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj
FAILED: esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj 
/home/studiopresent/.espressif/tools/riscv32-esp-elf/esp-13.2.0_20240530/riscv32-esp-elf/bin/riscv32-esp-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/build/config" -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/include" -I/home/studiopresent/ESP/esp-idf/components/newlib/platform_include -I/home/studiopresent/ESP/esp-idf/components/freertos/config/include -I/home/studiopresent/ESP/esp-idf/components/freertos/config/include/freertos -I/home/studiopresent/ESP/esp-idf/components/freertos/config/riscv/include -I/home/studiopresent/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/studiopresent/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/studiopresent/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/studiopresent/ESP/esp-idf/components/freertos/esp_additions/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/include/soc -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/dma/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/ldo/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/studiopresent/ESP/esp-idf/components/heap/include -I/home/studiopresent/ESP/esp-idf/components/log/include -I/home/studiopresent/ESP/esp-idf/components/soc/include -I/home/studiopresent/ESP/esp-idf/components/soc/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/soc/esp32c6/include -I/home/studiopresent/ESP/esp-idf/components/hal/platform_port/include -I/home/studiopresent/ESP/esp-idf/components/hal/esp32c6/include -I/home/studiopresent/ESP/esp-idf/components/hal/include -I/home/studiopresent/ESP/esp-idf/components/esp_rom/include -I/home/studiopresent/ESP/esp-idf/components/esp_rom/include/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/esp_rom/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/esp_common/include -I/home/studiopresent/ESP/esp-idf/components/esp_system/include -I/home/studiopresent/ESP/esp-idf/components/esp_system/port/soc -I/home/studiopresent/ESP/esp-idf/components/esp_system/port/include/riscv -I/home/studiopresent/ESP/esp-idf/components/esp_system/port/include/private -I/home/studiopresent/ESP/esp-idf/components/riscv/include -I/home/studiopresent/ESP/esp-idf/components/lwip/include -I/home/studiopresent/ESP/esp-idf/components/lwip/include/apps -I/home/studiopresent/ESP/esp-idf/components/lwip/include/apps/sntp -I/home/studiopresent/ESP/esp-idf/components/lwip/lwip/src/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/freertos/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/esp32xx/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/studiopresent/ESP/esp-idf/components/lwip/port/esp32xx/include/sys -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include" -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zboss-lib/include" -I/home/studiopresent/ESP/esp-idf/components/nvs_flash/include -I/home/studiopresent/ESP/esp-idf/components/spi_flash/include -I/home/studiopresent/ESP/esp-idf/components/esp_partition/include -I/home/studiopresent/ESP/esp-idf/components/esp_driver_uart/include -I/home/studiopresent/ESP/esp-idf/components/vfs/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap "-fmacro-prefix-map=/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock=." -fmacro-prefix-map=/home/studiopresent/ESP/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj -MF esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj.d -o esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj -c '/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp'
In file included from /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include/esp_zigbee_trace.h:12,
                 from /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include/esp_zigbee_core.h:14,
                 from /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/include/zigbee.hpp:5,
                 from /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp:1:
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include/esp_zigbee_type.h:107:32: warning: attribute ignored in declaration of 'union esp_zb_zcl_cluster_s::<unnamed>' [-Wattributes]
  107 |     ESP_ZB_PACKED_STRUCT union {
      |                                ^
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include/esp_zigbee_type.h:107:32: note: attribute for 'union esp_zb_zcl_cluster_s::<unnamed>' must follow the 'union' keyword
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include/esp_zigbee_type.h:293:32: warning: attribute ignored in declaration of 'union esp_zb_endpoint_s::<unnamed>' [-Wattributes]
  293 |     ESP_ZB_PACKED_STRUCT union {
      |                                ^
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include/esp_zigbee_type.h:293:32: note: attribute for 'union esp_zb_endpoint_s::<unnamed>' must follow the 'union' keyword
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp: In static member function 'static void ZigbeeComponent::Zigbee::init()':
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/include/zigbee.hpp:27:23: error: 'RADIO_MODE_NATIVE' was not declared in this scope; did you mean 'ZB_RADIO_MODE_NATIVE'?
   27 |         .radio_mode = RADIO_MODE_NATIVE,                        \
      |                       ^~~~~~~~~~~~~~~~~
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp:94:29: note: in expansion of macro 'ESP_ZB_DEFAULT_RADIO_CONFIG'
   94 |             .radio_config = ESP_ZB_DEFAULT_RADIO_CONFIG(),
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/include/zigbee.hpp:32:33: error: 'HOST_CONNECTION_MODE_NONE' was not declared in this scope; did you mean 'ZB_HOST_CONNECTION_MODE_NONE'?
   32 |         .host_connection_mode = HOST_CONNECTION_MODE_NONE,      \
      |                                 ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp:95:28: note: in expansion of macro 'ESP_ZB_DEFAULT_HOST_CONFIG'
   95 |             .host_config = ESP_ZB_DEFAULT_HOST_CONFIG(),
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
